[package]
name = "lastkajen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["time"]
time = ["dep:time"]

[[example]]
name = "example"
path = "examples/example.rs"

[dependencies]
reqwest = { version = "0.11", features = ["serde_json", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"

time = { version = "0.3", features = ["serde", "parsing", "serde-human-readable"], optional = true }

[dev-dependencies]
tokio = { version = "1.34", features = ["macros", "rt", "rt-multi-thread"] }
tokio-test = "0.4"
dotenv = "0.15"
